--- a/frontend-react/src/styles/main.scss
+++ b/frontend-react/src/styles/main.scss
@@ -42,7 +42,7 @@ light text: #c3c8cb
     --lightIndentRemainder: calc(100% - 2* var(--lightIndent));
 
     //Dimensions
-    --maxWidth: 400px;
+    --maxWidth: 520px;
     --menuWidth: 40%;
     --heightTitlebar: 5em;
 
@@ -917,6 +917,24 @@ html {
     .photoHeader{
         @include flexOAJ(row, center, space-between);
         width: 100%;
+        margin: 1em;
+        border: none;
+        
+        img{
+            width:60%
+        }
+        button{
+            @include flexOAJ(row,center , center );
+            margin: 2em;
+            border-width:0;
+
+            height:2em;
+            width: 2em;
+
+            &:hover{
+                background-color: var(--backgroundShadeC);
+            }
+        }
         
     }
     .photoFooter{
@@ -945,11 +963,6 @@ html {
                 }
                 
             }
-        }
-
-        .sendPhotoButton{
-            opacity: 100%;
-            background-color: var(--primaryC);
         }
 
     }
@@ -983,4 +996,21 @@ html {
         width: 100%;
     }
     
+}
+
+.uploadWrapper{
+    @include roundedCorners(false);
+    height: 1.5em;
+    width: 1.5em;
+
+    padding:0.5em;
+
+    input{
+        display: none;
+    }
+    
+    &:hover{
+        cursor: pointer;
+        background-color: var(--backgroundShadeC);
+    }
 }
